Fix case weird overlapping thing
The last carousel panel would have a higher z-index than the carousel-previous-panel but lower z-index than the carousel-current-panel. This made a strange appearance when the last panel lost the carousel-previous-panel class and returned to the right side of the page from the left.

--- a/scss/components/_carousel.scss
+++ b/scss/components/_carousel.scss
@@ -28,10 +28,11 @@
 .carousel-current-panel
 {
     transform: translateX(0) !important;
-    z-index: -10;
+    z-index: -10 !important;
 }
 
 .carousel-previous-panel
 {
     transform: translateX(-100%) !important;
+    z-index: -14 !important;
 }
